<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:elevation="1dp"
            android:src="@drawable/ic_product"
            app:shapeAppearanceOverlay="@style/ImageStyleCornersRounded" />

        <RelativeLayout
            android:id="@+id/detailsRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/removeBtn"
            android:layout_toEndOf="@id/profileIv"
            android:padding="2dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/item_name"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/quantityLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTv"
                android:paddingHorizontal="5dp"
                android:text="@string/qty_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/quantityTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTv"
                android:layout_toEndOf="@id/quantityLabelTv"
                android:paddingHorizontal="3dp"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/removeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_remove_red"
            android:contentDescription="@string/to_remove_items" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>