<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <!--ImageButton: Click to go back-->
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_back_button"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <!--TextView: Toolbar Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/product_details"
            tools:ignore="RelativeOverlap" />

        <!--View: To make Toolbar look separate from other UI-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCv"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/toolbarRl"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            style="@style/ImageStyleCornersRounded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_product"
            android:padding="10dp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTv"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileCv"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="?attr/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/descriptionTv"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginHorizontal="5dp"
        android:padding="5dp"
        android:text="@string/description" />


</RelativeLayout>