<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <!--ImageButton: Click to go back-->
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_back_button"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <!--TextView: Toolbar Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register" />

        <!--View: To make Toolbar look separate from other UI-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:padding="10dp">

        <!--ShapeableImageView: Show static image (ic_person_white) from drawable-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@color/gray_100"
            android:src="@drawable/ic_person_white"
            app:shapeAppearanceOverlay="@style/ImageStyleCircle" />

        <!--TextView: Show a Labeled text-->
        <TextView
            android:id="@+id/registerLabelTv"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/register_label" />

        <!--TextInputLayout: Input Name for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerLabelTv"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_name"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/ic_person_white">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextInputLayout: Input Phone for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTil"
            android:hint="@string/hint_phone"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/ic_phone_white">

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextInputLayout: Input DOB for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneTil"
            android:hint="@string/hint_dob"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconDrawable="@drawable/ic_date_white"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_cake_white">

            <EditText
                android:id="@+id/dobEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:importantForAutofill="no"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextInputLayout: Input Email for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dobTil"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/ic_email_white">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextInputLayout: Input Password for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:hint="@string/hint_password"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_white">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextInputLayout: Input Password for Registration-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cPasswordTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTil"
            android:hint="@string/hint_confirm_password"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_white">

            <EditText
                android:id="@+id/cPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--TextView: Click to go to RegisterFragment-->
        <TextView
            android:id="@+id/haveAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cPasswordTil"
            android:layout_marginTop="5dp"
            android:text="@string/already_have_account_login" />

        <!--MaterialButton: Click to Login User-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:minHeight="@dimen/button_height"
            android:text="@string/register" />

    </RelativeLayout>

</RelativeLayout>