<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <!--ImageButton: Click to go back-->
        <ImageButton
            android:id="@+id/toolbarRefreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_back_button"
            android:padding="10dp"
            android:src="@drawable/ic_refresh" />

        <!--TextView: Toolbar Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/products"
            tools:ignore="RelativeOverlap" />

        <!--View: To make Toolbar look separate from other UI-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_200" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/recyclerPb"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:paddingBottom="5dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/row_product" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cartFab"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/fab_button"
        android:src="@drawable/ic_cart"
        android:visibility="gone"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary" />

    <RelativeLayout
        android:id="@+id/noInternetRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noInternetIv"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/no_internet_connection"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_no_internet" />

        <TextView
            android:id="@+id/noNetworkTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noInternetIv"
            android:layout_centerHorizontal="true"
            android:maxWidth="300dp"
            android:text="No Internet Connection, Please check you network connection and Try Again"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noNetworkTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Refresh"
            app:icon="@drawable/ic_refresh" />

    </RelativeLayout>

</RelativeLayout>